--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -184,6 +184,7 @@ header{
             left: 0;
             width: 100%;
             padding: 20px 10px;
+            z-index: 99;
         }
 
         .support{
