--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -190,6 +190,9 @@ header .navbar .support a:hover {
     padding: 20px 10px;
     z-index: 99;
   }
+  header .navbar-collapse .nav-item {
+    margin: 5px 0;
+  }
   header .support {
     position: absolute;
     right: 20%;
@@ -520,6 +523,11 @@ header .navbar .support a:hover {
   font-weight: 700;
   color: #ffffff;
 }
+@media screen and (max-width: 768px) {
+  .widget .content {
+    margin: 10px 0;
+  }
+}
 
 .faq {
   position: relative;
@@ -570,6 +578,18 @@ header .navbar .support a:hover {
 }
 .faq ul li p {
   font-size: 16px;
+}
+@media screen and (max-width: 767px) {
+  .faq::before {
+    opacity: 0.5;
+    right: 0;
+    z-index: 0;
+  }
+  .faq::after {
+    opacity: 0.3;
+    z-index: 0;
+    left: -10%;
+  }
 }
 
 .widget-second {
