--- a/assets/css/_variable.scss
+++ b/assets/css/_variable.scss
@@ -15,6 +15,7 @@ $light: #ffffff;
 $grey-bg: #f5f5f5;
 $grey: #b1b1b1;
 $p-color: #616161;
+$pink:#9c4665;
 
 p{
     color: $p-color;
@@ -25,6 +26,7 @@ p{
     padding: 10px 20px;
     margin: 5px 0;
     border-radius: 18px;
+    position: relative;
 
     .form-group{
         position: relative;
@@ -47,7 +49,7 @@ p{
         }
     }
 
-     input, textarea{
+     input, select{
         position: relative;
         &:not([type="submit"]){
             background: none;
