--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -242,28 +242,30 @@ header{
 
     .container{
         background: $grey-bg;
-        padding: 60px 20px 20px;
+        padding: 40px 30px 30px;
         border-radius: 24px;
         box-shadow: 0 4px 24px 0 rgba(0, 0, 0, 0.102);
         position: relative;
         overflow: hidden;
     }
         .banner-image-wrapper{
-            height: 345px;
-            width: 350px;
-            box-shadow: 0 4px 24px 0 rgba(0, 0, 0, 0.102);
+            height: 410px;
+            width: 450px;
             border-radius: 24px;
-            position: absolute;
-            right: 30%;
-            top: 13%;
+            border-top-right-radius: 0;
+            border-bottom-right-radius: 0;
+            border-left: solid;
+            border-bottom: solid;
+            border-width: 10px;
+            border-color: $primary-color;
             overflow: hidden;
             .banner-image{
                 background: url('../images/banner.webp');
                 background-position: center;
                 background-size: cover;
                 background-repeat: no-repeat;
-                height: 450px;
-                width: 330px;
+                height: 410px;
+                width: 450px;
                 z-index: 0;
             }
         }
@@ -349,16 +351,15 @@ header{
         
         .form-wrapper{
             position: relative;
-            border-right: solid;
-            border-bottom: solid;
-            border-top: solid;
-            border-left: solid;
-            border-width: 1px 8px 8px 1px;
-            border-color: $primary-color;
-            border-radius: 18px;
             .form{
-                margin: 0 0 5px !important;
                 @include form;
+                height: 410px;
+                margin-top: 0;
+                border-top-left-radius: 0;
+                border-bottom-left-radius: 0;
+                border-bottom: solid;
+                border-width: 10px;
+                border-color: $primary-color;
             }
         }
 
@@ -370,15 +371,18 @@ header{
             box-shadow: 0 4px 24px 0 rgba(0,0,0,.102);
             .banner-image-wrapper{
                 height: 350px;
-                width: 350px;
+                width: 100%;
                 top: 10%;
                 right:0;
+                margin-top: 10px;
+                border-top-right-radius: 24px;
+                border-bottom-right-radius: 24px;
             }
             .banner-image{
                 background-position: center;
                 background-size: cover;
                 height: 350px;
-                width: 350px;
+                width: 100%;
             }
             .home-visit{
                 h6{
@@ -387,6 +391,16 @@ header{
             }
             .content-1 h6 {
                 font-size: 32px;
+            }
+            .form-wrapper{
+                .form{
+                    border-bottom: 0;
+                    border-top-left-radius: 18px;
+                    border-bottom-left-radius: 18px;
+                    margin-top: 10px;
+                    height: auto;
+                    padding: 20px;
+                }
             }
         }
     }
@@ -407,13 +421,7 @@ header{
                 background-size: cover;
                 right: 0;
                 left: 0;
-                bottom: 0;
-                width: 100%;
-                border-bottom-left-radius: 0;
-                border-bottom-right-radius: 0;
-                .banner-image{
-                    width: 100%;
-                }
+                top: 0;
             }
             .time-content{
                 position: relative;
@@ -557,7 +565,7 @@ header{
 #loadMore, #workMore, #packageMore, #whyMore, #careMore{
     position: relative;
     z-index: 1;
-    background-color: $pink;
+    background-color: $primary-color;
     border: 0;
     padding: 10px 15px;
     border-radius: 8px;
