--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -16,8 +16,7 @@ body{
     transition: 0.2s all ease;
 
     a{
-        background-color: $primary-color;
-        border: 1px solid $primary-color;
+        background-color: $pink;
         padding: 15px 17px;
         border-radius: 100px;
 
